# rssling_bot

./: Cargo.toml
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6455417938858902952.wt  collection-2--6455417938858902952.wt  index-1--6455417938858902952.wt  index-3--6455417938858902952.wt  sizeStorer.wt
data/db/diagnostic.data/: metrics.2023-01-29T19-10-58Z-00000  metrics.interim
src/: lib.rs  main.rs
src/bot/: mod.rs
src/db/: channels.rs  error.rs  mod.rs  notifications.rs  setup.rs  types.rs  users.rs
src/rss/: mod.rs
src/types/: channel.rs  mod.rs  notification.rs  subscription.rs
