[package]
name = "rssling_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
simple_logger = "2.1.0"
url = "2.3.1"
log = "0.4"
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
mongodb = "2.3.0"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["full", "rt-multi-thread", "macros"] }
