[package]
name = "rssling_bot"
version = "0.1.0"
authors = ["Artem Rakov <artem@rakov.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
simple_logger = "2.1.0"
rss = "2.0"
syndication = {git = "https://github.com/rust-syndication/syndication"}
atom_syndication = "0.11"
bson = { version = "2.5.0", features = ["chrono-0_4", "serde_with"]}
serde_with = "1"
url = "2.3.1"
log = "0.4"
serde = {version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
mongodb = "2.3.0"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version =  "1.23", features = ["full", "rt-multi-thread", "macros"] }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
native-tls = { version = "0.2.6", features = ["vendored"] }

